Fix: Wrong padding in the link actions UI.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkactions.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-link/linkactions.css
@@ -9,13 +9,15 @@
 @import "../mixins/_shadow.css";
 
 .ck-link-actions {
-	padding: var(--ck-spacing-standard) var(--ck-spacing-medium);
+	padding: var(--ck-spacing-standard);
 
 	& .ck-button {
 		border: 0;
 	}
 
 	& .ck-button.ck-link-actions__preview {
+		padding: 0;
+
 		&,
 		&:hover,
 		&:focus,
@@ -32,13 +34,14 @@
 		}
 
 		& .ck-button__label {
+			padding: 0 var(--ck-spacing-standard);
 			color: var(--ck-color-link-default);
 			text-overflow: ellipsis;
 			cursor: pointer;
 
 			/* Match the box model of the link editor form's input so the balloon
 			does not change width when moving between actions and the form. */
-			max-width: 17em;
+			max-width: 18em;
 			min-width: 3em;
 			text-align: center;
 
